poco.css
/* ... */
/* Reset basics */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Navbar base */



/* Container */



/* Logo */



/* Desktop links */



/* Toggle button */
.menu-toggle {
  display: none;
  flex-direction: column;
  cursor: pointer;
    
}

.menu-toggle span {
  height: 3px;
  width: 25px;
  background: #333;
  margin: 4px 0;
  transition: 0.3s;
}

/* Mobile menu */



.header3 a {
  padding: 10px 0;
  text-decoration: none;
  color: white;
  
  
}
.header3 a:hover{
    background-color: rgba(128, 128, 128, 0.229);
    padding:10px;
    border-radius:10px ;
    transition: 308ms ease-in-out;
}
/* Responsive */
@media (max-width: 768px) {
  .nav-links {
    display: none;
  }

  .menu-toggle {
    display: flex;
      margin-left:-2rem;

  }
  .menu-toggle span{
    color:ghostwhite;
  }

  .link p a{
    display: flex;
    flex-direction: column;
    border-bottom: 1px solid #eee;
    font-size:25px;
  padding:10px;
  
    
  }
  .link p:hover{
background-color:rgba(128, 128, 128, 0.237);
width: auto;
border-radius:10px ;
    transition: 308ms ease-in-out;

  }
  .center{
    font-size: 25px;
  }
  .header3{
    width:100%;
    position:absolute;
      
    box-sizing: border-box;
    box-shadow: 0px 10px 25px  grey;
    display:none;
    position:fixed;
      z-index:1000;

      margin-top:3rem;
  }
  .header3.active{
    display:flex;
  }
   .header-top {
        padding: 40px;
        gap: 90px;
        width:100%;
        z-index:999;
        font-size: 25px;
    }
    .menu-toggle.open span:nth-child(1) {
  transform: rotate(45deg) translate(5px, 5px);
 
}

.menu-toggle.open span:nth-child(2) {
  opacity: 0;
}

.menu-toggle.open span:nth-child(3) {
  transform: rotate(-45deg) translate(6px, -6px);
}
.texture{
        text-align: center;
        font-size: 30px;
    }
    .home{
        position:absolute;
        display:none;
    }
    .write{
        text-align: justify;
    }
    .hot{
        margin-left: -10px;
    }
    .picture{
        margin-top: 30rem;

    }
    .area{
        margin-top:-10rem;
    }
    .forth{
        height:130vh;
        padding-top: -800px;
    }
    .times{
        padding-top:-100px;
    }
    .burger{
        width:200px;
        height: 100px;
        
    }
    .grid{
display:grid;
 display: grid;
    grid-template-rows:130px 130px 130px 13p0px 130px 130px ;
    grid-template-columns: 350px ;


    }
    .divs{
        display:flex;
        flex-direction: column;
        gap:2rem;
    }
    .dash{
color:white;
    }
    .footer-power{
        text-align: justify;
    }
    .last-footer{
        padding-left:20px;
    }
}

/* ============================================================
   EXTRA SMALL SCREENS (320px and below)
   ===============I'm============================================ */

@media (max-width: 320px) {
   
    

    .img {
        max-width: 50px;
        height: 70px;
    }

    .buy {
        width: 80px;
        height: 24px;
        font-size: 9px;
        padding: 3px 6px;
    }
    .open span:nth-child(1) {
  transform: rotate(45deg) translateY(8px);
}
.open span:nth-child(2) {
  opacity: 0;
}
.open span:nth-child(3) {
  transform: rotate(-45deg) translateY(-8px);
}

    .header-middle {
        gap: 5px;
    }

    input[type="text"] {
        padding: 6px 10px;
        font-size: 11px;
    }

    .header3 {
        gap: 10px;
        flex-direction: column;
        height: 80vh;
        display: none;
    }
   
    
    

    .link p a {
        font-size: 10px;
    }

    .spicy {
        font-size: 18px;
    }
    
    

    .order {
        width: 90%;
    }

    .regular {
        font-size: 18px;
    }

    .whole {
        min-width: 100px;
    }

    .view {
        font-size: 12px;
        height: 40px;
    }

    .deliver {
        font-size: 18px;
    }

    .offer {
        font-size: 28px;
    }

    .lunch {
        width: 100px;
        height: 35px;
        font-size: 10px;
    }

    th, td {
        width: 50px;
        font-size: 9px;
    }
}








   

